# PDF2025

./: README.md
detector_w_display/: CMakeLists.txt  buzzer.c  buzzer.h  display.c  display.h  noise_detector.c
noise_detector/: CMakeLists.txt  noise_detector.c
